--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
@@ -47,4 +48,8 @@ dependencies {
     compile 'com.lai.weavey:dialog:2.0.1'
     //运行时权限
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0@aar'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
